# SurgicalVision3D-Planner

./: .gitignore  README.md
Legacy/AblationPlanner/Resources/UI/: AblationPlanner.ui
SurgicalVision3D_Planner/: SurgicalVision3D_Planner.py
SurgicalVision3D_Planner/Resources/UI/: SurgicalVision3D_Planner.ui
app/: CMakeLists.txt
app/SurgicalVision3D_Planner/: CMakeLists.txt  PHASE1_REFACTOR_NOTES.md  SurgicalVision3D_Planner.py  USAGE_GUIDE.md
app/SurgicalVision3D_Planner/Resources/Cohorts/: cohort_catalog_v1.json  cohort_schema_v1.json
app/SurgicalVision3D_Planner/Resources/Cohorts/studies/: example_cohort_v1.json
app/SurgicalVision3D_Planner/Resources/Reproducibility/: README_package_template.md  example_reviewer_package_config_v1.json  reproducibility_package_layout_v1.json  reproducibility_package_schema_v1.json
app/SurgicalVision3D_Planner/Resources/UI/: SurgicalVision3D_Planner.ui
app/SurgicalVision3D_Planner/Testing/Python/: CMakeLists.txt  SurgicalVision3D_PlannerPhase1Test.py
